force-app/main/default/objects/BMCServiceDesk__Sync_Identifier__c/BMCServiceDesk__Sync_Identifier__c.object-meta.xml
<CustomObject>
    <label>Sync Identifier</label>
    <nameField>
        <label>Sync Identifier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sync Identifiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>