force-app/main/default/objects/BMCServiceDesk__Sync_Identifier__c/fields/BMCServiceDesk__New_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__New_Record_Id__c</fullName>
    <label>New Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>