force-app/main/default/objects/BMCServiceDesk__Sync_Identifier__c/fields/BMCServiceDesk__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>