force-app/main/default/objects/BMCServiceDesk__Sync_Identifier__c/fields/BMCServiceDesk__Old_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Old_Record_ID__c</fullName>
    <label>Old Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>