force-app/main/default/objects/BMCServiceDesk__Sync_Identifier__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>BMCServiceDesk__New_Record_Id__c</columns>
    <columns>BMCServiceDesk__Object_API_Name__c</columns>
    <columns>BMCServiceDesk__Old_Record_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>